--- a/index/authentication-1/index.html
+++ b/index/authentication-1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="UTF-8" />
-  <title>Hot Desk</title>
+  <title>Guest Browsing</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     html, body {
@@ -67,7 +67,7 @@
   <script src="https://momentjs.com/downloads/moment.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/previolet/dist/previolet-sdk.min.js"></script> -->
-  <script src="./../previolet-sdk.js?2"></script>
+  <script src="./../previolet-sdk.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
